[gd_scene load_steps=13 format=2]

[ext_resource path="res://Art/Levels/Hazards/Cracks/1/c_1_5.png" type="Texture" id=1]
[ext_resource path="res://Audio/Effects/building collapse3.wav" type="AudioStream" id=2]
[ext_resource path="res://Art/Levels/Hazards/Cracks/1/c_1_1.png" type="Texture" id=3]
[ext_resource path="res://Art/Levels/Hazards/Cracks/1/c_1_3.png" type="Texture" id=4]
[ext_resource path="res://Art/Levels/Hazards/Cracks/1/c_1_4.png" type="Texture" id=5]
[ext_resource path="res://Script/Levels/Collapse/s_crack_4.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Levels/Collapse/FragmentSpawn.tscn" type="PackedScene" id=7]
[ext_resource path="res://Art/Levels/Hazards/Cracks/1/c_1_2.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": false,
"name": "activate",
"speed": 8.0
} ]

[sub_resource type="Curve2D" id=2]
resource_local_to_scene = true
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -211.472, 50.1556, 0, 0, 0, 0, -85.3376, -67.5699, 0, 0, 0, 0, -16.3842, -28.8887, 0, 0, 0, 0, 74.4327, -77.6607, 0, 0, 0, 0, 153.477, -86.0697 )
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 711.72, 164.916 )

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -129.064, 156.109, 0, 0, 0, 0, -50.02, 68.6553, 0, 0, 0, 0, 0.433777, 26.6105 )
}

[node name="Crack" type="Node2D"]
script = ExtResource( 6 )
middle_fragments = [ "sm", "sm", "sm", "xs", "xs" ]
spawn_all = true

[node name="Area" type="Area2D" parent="."]
position = Vector2( 0, -1 )
collision_layer = 8
collision_mask = 0

[node name="Sprite" type="AnimatedSprite" parent="Area"]
frames = SubResource( 1 )
animation = "activate"
frame = 4

[node name="FragmentPath" type="Path2D" parent="Area"]
position = Vector2( 0, 1 )
curve = SubResource( 2 )

[node name="Collision_0" type="CollisionPolygon2D" parent="Area"]
visible = false
polygon = PoolVector2Array( -251.701, 277.786, -142.171, 139.682, -185.031, 138.095, -177.094, 90.4728, -234.24, 92.0602, -86.6117, -73.0295, -259.638, -98.4279, -154.87, -142.875, -262.813, -288.916, -334.246, 85.7106 )
disabled = true

[node name="Collision_2" type="CollisionPolygon2D" parent="Area"]
visible = false
polygon = PoolVector2Array( -251.701, 277.786, -131.059, 184.129, -154.891, 177.599, -115.185, 136.507, -99.3109, 104.759, -172.331, 125.396, -80.2621, 50.7878, -165.982, 87.298, -99.3109, 6.34055, -158.045, 19.0397, -99.3109, -49.2185, -37.4022, -80.9665, -91.3739, -77.7917, -151.695, -120.652, -262.813, -288.916, -334.246, 85.7106 )
disabled = true

[node name="Collision_4" type="CollisionPolygon2D" parent="Area"]
visible = false
polygon = PoolVector2Array( -251.701, 277.786, -24.703, 85.7106, -185.031, 138.095, 30.856, -28.5823, 148.324, -52.3933, 316.588, -93.6657, -154.87, -142.875, -262.813, -288.916, -334.246, 85.7106 )
disabled = true

[node name="FragmentSpawn" parent="." instance=ExtResource( 7 )]
position = Vector2( -139.233, -1.85974 )
interval = 0.05
infinite_fragments = [ "xs" ]

[node name="Sight" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 0

[node name="Collision" type="CollisionShape2D" parent="Sight"]
position = Vector2( 373.795, 26.3189 )
shape = SubResource( 3 )

[node name="ReferencePath" type="Path2D" parent="."]
visible = false
curve = SubResource( 4 )

[node name="FinalSpawn" type="Node2D" parent="."]
position = Vector2( 5.0062, -70.6356 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
bus = "Sound Effects"
[connection signal="area_shape_entered" from="Area" to="." method="_on_Area_area_shape_entered"]
[connection signal="animation_finished" from="Area/Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Area/Sprite" to="." method="_on_Sprite_frame_changed"]
[connection signal="area_shape_entered" from="Sight" to="." method="_on_Sight_area_shape_entered"]
